z-index fix mobil dropdown

--- a/src/app/components/innholdsfaner/innholdsfaner.less
+++ b/src/app/components/innholdsfaner/innholdsfaner.less
@@ -7,15 +7,12 @@
 
     &__faner {
         margin-bottom: 0.5rem;
+        position: relative;
+        z-index: 3;
     }
 
     &__fanetittel {
         margin-bottom: 1rem;
-    }
-
-    &__mobilfane {
-        position: relative;
-        z-index: 1;
     }
 
     @media (min-width: @tablet-breakpoint) {
